--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-dom": "^18.2.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -41,6 +39,8 @@
     "@types/react-dom": "^18.2.7",
     "customize-cra": "^1.0.0",
     "react-app-rewired": "^2.2.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
   }
 }
