--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "module": "ES6",
     "moduleResolution": "Node",
+    "allowSyntheticDefaultImports": true,
     "jsx": "react-jsx"
   }
 }
