--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.8.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -39,7 +40,6 @@
     "@types/react-dom": "^18.2.7",
     "customize-cra": "^1.0.0",
     "react-app-rewired": "^2.2.1",
-    "typescript": "^5.1.6",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   }
